# Silex

./: LICENSE  README.md
.github/workflows/: release.yaml
deploy/: silex-all-in-one.yaml
silex-cli/: go.mod  main.go
silex-ingress/: Cargo.toml  Dockerfile
silex-ingress/src/: main.rs
silex-ingress/src/routing/: circuit_breaker.rs  health_probe.rs  mod.rs
silex-ingress/src/sys/: signals.rs
silex-ingress/src/telemetry/: atomics.rs  exporter.rs  mod.rs
silex-ingress/src/tls/: acceptor.rs  cert_store.rs  mod.rs
silex-operator/: Dockerfile  go.mod  main.go
silex-operator/pkg/k8s/: client.go
silex-operator/pkg/sync/: http.go  sync.go
silex-operator/pkg/types/: types.go
